--- a/WorkflowMannagementSystem/src/main/resources/application.properties
+++ b/WorkflowMannagementSystem/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#server.port=8080
-#spring.datasource.url=jdbc:mysql://localhost:3306/mas_wms
-#spring.jpa.show-sql = true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.username=root
-#spring.datasource.password=mysql
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/mas_wms
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #server.port=8080
 #spring.datasource.url=jdbc:mysql://localhost/supervis_workflow_management
@@ -14,10 +14,10 @@
 #spring.datasource.password=kalum
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-server.port=8080
-spring.datasource.url=jdbc:mysql://mysql3000.mochahost.com/supervis_la_wms
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.username=supervis_mohan
-spring.datasource.password=mohan
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://mysql3000.mochahost.com/supervis_la_wms
+#spring.jpa.show-sql = true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.username=supervis_mohan
+#spring.datasource.password=mohan
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
